--- a/notebooks/first_project.ipynb
+++ b/notebooks/first_project.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "309e6bdd",
+   "id": "0bce6659",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "07e96994",
+   "id": "ce94d079",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "e47a2471",
+   "id": "9164690a",
    "metadata": {},
    "outputs": [
     {
@@ -393,7 +393,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "7a870b30",
+   "id": "fecd73b3",
    "metadata": {},
    "outputs": [
     {
@@ -419,7 +419,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "2ed7980a",
+   "id": "4c8cea6c",
    "metadata": {},
    "outputs": [
     {
@@ -440,7 +440,7 @@
   {
    "cell_type": "code",
    "execution_count": 88,
-   "id": "09d76ce0",
+   "id": "d7e3497d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -455,13 +455,15 @@
     "    for column in df.columns:\n",
     "        if df[column].dtype == 'float64':\n",
     "            df[column] = df[column].astype(int)\n",
-    "    return df\n"
+    "    return df\n",
+    "\n",
+    "# functions.update_columns_to_lower(df)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 50,
-   "id": "6070a1a9",
+   "id": "c6a2eeb8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -471,7 +473,7 @@
   {
    "cell_type": "code",
    "execution_count": 51,
-   "id": "787fb28c",
+   "id": "e575192e",
    "metadata": {},
    "outputs": [
     {
@@ -492,7 +494,7 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "id": "1b49ef36",
+   "id": "af1245e9",
    "metadata": {},
    "outputs": [
     {
@@ -721,7 +723,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "0e47601a",
+   "id": "6c987641",
    "metadata": {},
    "outputs": [
     {
@@ -740,7 +742,7 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "id": "36a618e6",
+   "id": "1a7e933c",
    "metadata": {},
    "outputs": [
     {
@@ -763,7 +765,7 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "id": "e2d0ba30",
+   "id": "026637b5",
    "metadata": {},
    "outputs": [
     {
@@ -828,7 +830,7 @@
   {
    "cell_type": "code",
    "execution_count": 67,
-   "id": "70ef7855",
+   "id": "90a8640b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -838,7 +840,7 @@
   {
    "cell_type": "code",
    "execution_count": 70,
-   "id": "e3627b6a",
+   "id": "fb77dcdf",
    "metadata": {},
    "outputs": [
     {
@@ -879,7 +881,7 @@
   {
    "cell_type": "code",
    "execution_count": 77,
-   "id": "2e935a2e",
+   "id": "3a51c4ab",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -891,7 +893,7 @@
   {
    "cell_type": "code",
    "execution_count": 79,
-   "id": "a3db8ec8",
+   "id": "2e88fb31",
    "metadata": {},
    "outputs": [
     {
@@ -1420,7 +1422,7 @@
   {
    "cell_type": "code",
    "execution_count": 72,
-   "id": "13265e43",
+   "id": "e074ee76",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1430,7 +1432,7 @@
   {
    "cell_type": "code",
    "execution_count": 75,
-   "id": "bcb43bed",
+   "id": "394e10f7",
    "metadata": {},
    "outputs": [
     {
@@ -1659,7 +1661,7 @@
   {
    "cell_type": "code",
    "execution_count": 89,
-   "id": "e687d8f6",
+   "id": "8ab14734",
    "metadata": {},
    "outputs": [
     {
@@ -1680,7 +1682,7 @@
   {
    "cell_type": "code",
    "execution_count": 90,
-   "id": "c415ca0f",
+   "id": "94c39a87",
    "metadata": {},
    "outputs": [
     {
@@ -1703,7 +1705,7 @@
   {
    "cell_type": "code",
    "execution_count": 92,
-   "id": "a39a2ec8",
+   "id": "d1c3bf4e",
    "metadata": {},
    "outputs": [
     {
@@ -1726,7 +1728,7 @@
   {
    "cell_type": "code",
    "execution_count": 93,
-   "id": "b9aec2ff",
+   "id": "4891bda5",
    "metadata": {},
    "outputs": [
     {
@@ -1749,7 +1751,7 @@
   {
    "cell_type": "code",
    "execution_count": 94,
-   "id": "9053f195",
+   "id": "db8e8985",
    "metadata": {},
    "outputs": [
     {
@@ -1980,7 +1982,7 @@
   {
    "cell_type": "code",
    "execution_count": 95,
-   "id": "a75fb99a",
+   "id": "796c7466",
    "metadata": {},
    "outputs": [
     {
@@ -2002,7 +2004,7 @@
   {
    "cell_type": "code",
    "execution_count": 100,
-   "id": "f5520675",
+   "id": "90ded9ea",
    "metadata": {},
    "outputs": [
     {
@@ -2030,7 +2032,7 @@
   {
    "cell_type": "code",
    "execution_count": 101,
-   "id": "0b04b30e",
+   "id": "389b85db",
    "metadata": {},
    "outputs": [
     {
